--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,20 @@
+<label for="server-name">Server name</label>
+<!-- <input
+  type="text"
+  name="server-name"
+  class="form-control"
+  (input)="onUpdateServerName($event)"> -->
+<input
+  type="text"
+  name="server-name"
+  class="form-control"
+  [(ngModel)]="serverName">
+<!-- <p>{{ serverName }}</p> -->
+<!-- <p [innerHTML]="serverName"></p> -->
+<button
+  class="btn btn-primary"
+  [disabled]="!allowNewServer"
+  (click)="onCreateServer()">Add Server</button>
+  <p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
 <app-server></app-server>
