--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -10,11 +10,15 @@
   class="form-control"
   [(ngModel)]="serverName">
 <!-- <p>{{ serverName }}</p> -->
-<!-- <p [innerHTML]="serverName"></p> -->
+<!-- <p [innerText]="serverName"></p> -->
 <button
   class="btn btn-primary"
   [disabled]="!allowNewServer"
   (click)="onCreateServer()">Add Server</button>
-  <p>{{ serverCreationStatus }}</p>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<p *ngIf="serverCreated; else noServer">Server was created! Server name is {{ serverName }}</p>
+<ng-template #noServer>
+  <p>No server was created!</p>
+</ng-template>
 <app-server></app-server>
 <app-server></app-server>
