--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -16,9 +16,10 @@
   [disabled]="!allowNewServer"
   (click)="onCreateServer()">Add Server</button>
 <!-- <p>{{ serverCreationStatus }}</p> -->
-<p *ngIf="serverCreated; else noServer">Server was created! Server name is {{ serverName }}</p>
+<!-- <p *ngIf="serverCreated; else noServer">Server was created! Server name is {{ serverName }}</p>
 <ng-template #noServer>
   <p>No server was created!</p>
-</ng-template>
+</ng-template> -->
+<p *ngIf="serverCreated">Server was created! Server name is {{ serverName }}</p>
 <app-server></app-server>
 <app-server></app-server>
