--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -21,4 +21,4 @@
   <p>No server was created!</p>
 </ng-template> -->
 <p *ngIf="serverCreated">Server was created! Server name is {{ serverName }}</p>
-<app-server *ngFor="let server of servers"></app-server>
+<app-server *ngFor="let server of servers; let i = index"></app-server>
