--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -8,7 +8,7 @@
     <h1>Recipe Name</h1>
   </div>
 </div>
-<div class="rov">
+<div class="row">
   <div class="col-xs-12">
     <div class="btn-group">
       <button 
