--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -7,7 +7,13 @@
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" ngModel class="form-control">
+        <input
+          type="password" 
+          id="password" 
+          name="password" 
+          ngModel 
+          class="form-control"
+          [minlength]="6">
       </div>
       <button class="btn btn-primary" type="submit">Sign Up</button>
     </form>
