Adding a Logout Button

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,10 @@
           <li><a routerLink="/signup">Register</a></li>
           <li><a routerLink="/signin">Login</a></li>
         </ng-template>
+        <li><a 
+            style="cursor: pointer;" 
+            (click)="onLogout()" 
+            *ngIf="authService.isAuthentificated()">Logout</a></li>
         <li class="dropdown" appDropdown *ngIf="authService.isAuthentificated()">
           <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
